Fix spacing when tags get wrapped to multiple lines

--- a/django_colortag/static/django_colortag.css
+++ b/django_colortag/static/django_colortag.css
@@ -4,6 +4,10 @@
 	opacity: 1;
 	font-size: 100%;
 }
+.btn.colortag {
+	display: inline-block;
+	margin: 0.2em 0; /* spacing between lines */
+}
 .btn.colortag-light,
 .label.colortag-light {
 	color: #000;
